small fixes
- cqc fix
- description updates
